--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,5 +1,11 @@
 <%- include ("partials/header") %>
 
 <h1>Welcome to Pratilipi Stories</h1>
+<p> Incomplete implementation due to errors, 
+    therefore, online DB isn't integrated (only local mongoDB was used),
+    so authentication only works locally
+    Still, if interested,
+    basic logic for liveViewCount and totalViews is given in app.js:62 onwards
+</p>
 
 <%- include ("partials/footer") %>
