--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-3">
             <p class="lead">Pratilipi Stories</p>
-            <p> current users here: </p>
+            <p> current users here: <%=story.currentViewers %> </p>
             <p> total view counts: <%=story.totalViews%></p> 
         </div>
         <div class="col-md-9">
